--- a/atividadeErick-BootStrap/index.html
+++ b/atividadeErick-BootStrap/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nitzy</title>
     <link rel="stylesheet" type="text/css" href="./styles/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
   </head>
   <body>
     <header>
@@ -45,12 +55,12 @@
             <div class="container text-center ">
                 <div class="row align-middle">
                   <div class="col-md-6 area-header">
-                    <h2>Descubra a Elegância e Durabilidade do Couro Genuíno</h2>
-                    <h2>Faça o Download do Nosso App e Acesse em Qualquer Lugar</h2>
+                    <h2>Elegância e Durabilidade do Couro Genuíno</h2>
+                    <h2>Faça o Download do Nosso App </h2>
                     <div class="row">
-                        <div class="col-md6">
-                            <button type="button" class="btn btn-light">Download</button>
-                            <button type="button" class="btn btn-light">Download</button>
+                        <div class="col-12">
+                            <button type="button" class="btn-down"><i class="fa-brands fa-google-play"></i>&nbsp;Download</button>
+                            <button type="button" class="btn-down"><i class="fa-brands fa-apple"></i>&nbsp;Download</button>
                         </div>
                     </div>
                   </div>
@@ -61,36 +71,46 @@
               </div>
         </section>
 
-        <section class="text-center">
+        <section class="text-center cards-bolsas">
+          <h3>Os três Es</h3>
             <div class="container text-center">
                 <div class="row align-middle">
                     <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="./img/bolsaW1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Elegante</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <p class="card-text">Para a mulher dinâmica que não para,
+                                 a Bolsa Adventure é a companheira ideal. 
+                                Resistente, mas sem comprometer a elegância, esta bolsa é 
+                                feita para acompanhar você em todos os momentos do dia. </p>
+                              <button type="button" class="btn-bolsas">Download</button>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="./img/bolsaW2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Extravagante</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <p class="card-text"> 
+                                Com linhas limpas e design descomplicado, esta bolsa fala 
+                                diretamente ao coração daqueles que buscam funcionalidade 
+                                sem abrir mão do estilo.</p>
+                              <button type="button" class="btn-bolsas">Download</button>
                             </div>
                           </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="./img/bolsaW3.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Empoderada</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <p class="card-text">A Bolsa redefine o luxo com 
+                                seu couro premium e acabamento impecável. 
+                                Perfeita para a mulher sofisticada que valoriza detalhes 
+                                sutis mas impactantes. </p>
+                              <button type="button" class="btn-bolsas">Download</button>
                             </div>
                           </div>
                     </div>
@@ -98,6 +118,123 @@
             </div>
             
         </section>
+
+        <section>
+          <div class="container text-center">
+            <div class="row row-cols-2">
+              <div class="col-md-6 align-self-center">
+                <img class="img-people" src="./img/womanCarrossel.png" alt="mulher com uma bolsa">
+              </div>
+              <div class="col-md-6 align-self-center">
+                <h3>Descubra a Elegância Duradoura do Couro</h3>
+                <p>Encontre o equilíbrio perfeito entre estilo e funcionalidade com nossa linha de produtos em couro. 
+                  Do escritório para o happy hour, nossos artigos em couro são seus companheiros confiáveis em todas as 
+                  aventuras da vida. Desde carteiras elegantes até mochilas robustas, cada peça é criada para resistir 
+                  ao teste do tempo, mantendo você sempre à frente em termos de estilo. 
+                  Realce sua presença com a sofisticação inegável do couro e faça uma declaração de elegância duradoura.</p>
+              </div>
+              <div class="col-md-6 align-self-center">
+                <h3>Elevando o Seu Estilo com Sofisticação em Couro</h3>
+                <p> Descubra a beleza atemporal e a versatilidade de nossos produtos em couro, 
+                  projetados para a mulher moderna que valoriza o estilo e a qualidade. De bolsas chiques a acessórios elegantes, 
+                  cada peça é uma expressão de sofisticação e bom gosto. O couro luxuoso e os detalhes cuidadosamente elaborados 
+                  adicionam um toque de refinamento a qualquer look, elevando seu estilo do comum ao extraordinário. 
+                  Encontre sua próxima peça favorita em nossa coleção e deixe sua marca com a beleza autêntica do couro.</p>
+              </div>
+              <div class="col-md-6 align-self-center">
+                <img class="img-people" src="./img/manCarrossel.png" alt="homem na moto">
+              </div>
+            </div>
+          </div>
+
+        </section>
+
+
+
+        <section>
+          <div class="container">
+              <div class="row">
+                  <div class="col-md-4 mb-4">
+                      <div class="card text-center shadow">
+                          <div class="card-body">
+                              <h2 class="card-text">Passo 1</h2>
+                              <p class="card-text">Descreva se sua solução funciona neste passo.</p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-md-4 mb-4">
+                      <div class="card text-center shadow">
+                          <div class="card-body">
+                              <h2 class="card-text">Passo 2</h2>
+                              <p class="card-text">Descreva se sua solução funciona neste passo.</p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-md-4 mb-4">
+                      <div class="card text-center shadow">
+                          <div class="card-body">
+                              <h2 class="card-text">Passo 3</h2>
+                              <p class="card-text">Descreva se sua solução funciona neste passo.</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+      <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#f2e2d5" fill-opacity="1" d="M0,128L60,133.3C120,139,240,149,360,128C480,107,600,53,720,53.3C840,53,960,107,1080,112C1200,117,1320,75,1380,53.3L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+      </svg>
+      </section>
+
+      <section class="text-center Beneficio">
+        <div class="container">
+          <h3>NITZY no mundo</h3>
+          <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                  Benefício 01
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                <div class="accordion-body">
+                   It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                  Benefício 02
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                  Benefício 03
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+
+
     </main>
 
 
